# textrip

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package.json  style.css
.github/workflows/: main.yml
docs/: index.html
docs/wasm/: README.md  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
examples/: cli_tester.rs
libs/: fabric.min.js
src/: lib.rs
static/: index.html
static/wasm/: wasm.js  wasm_bg.wasm
wasm/: README.md  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
