[package]
name = "textrip"
version = "0.1.0"
authors = ["Grant Handy <grantshandy@gmail.com>"]
description = "Get perspective accurate textures for 3D modeling and graphics from any image in an easy to use website"
license = "GPL-3.0"
repository = "https://github.com/skylinecc/textrip"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
imageproc = "0.22.0"
image = "0.23.14"
# js-sys = "0.3.51"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlCollection',
  'HtmlImageElement'
]